Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, once we see the output take a look at the cell below with the hash tag to the right of the string, `'hello'`.  This is a comment like the above.  Comments are used for programmers to annotate their code, but a comment has no impact on the code.  We can see this by running the cell below (again, press shift + enter).\n"
+    "Ok, once we see the output take a look at the cell below with the hash tag to the right of the string, `'hello'`.  This is a comment like the above.  Comments are used for programmers to annotate their code, but a comment has no impact on the code.  We can see this by running the cell below (again, press shift + enter)."
    ]
   },
   {
@@ -111,7 +111,11 @@
    },
    "outputs": [],
    "source": [
-    "'hello' ### whattttt"
+    "'hello' ### whattttt\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
