--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,10 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vandelay\" # \"ART VANDELAY\"\n",
+    "\n",
+    "art vandelay\n",
+    "\n"
    ]
   },
   {
