Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,8 +88,7 @@
    "source": [
     "\"art vandelay\" # \"ART VANDELAY\"\n",
     "\n",
-    "art vandelay\n",
-    "\n"
+    "art vandela\n"
    ]
   },
   {
