--- a/index.ipynb
+++ b/index.ipynb
@@ -113,11 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "'hello' ### whattttt\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "'hello' ### whattttt"
    ]
   },
   {
